syntax = "proto3";

package transaction;

option go_package = "core/transaction/pb;kangarootxpb";

message KangarooTransaction {
  bytes to_address = 1;
  bytes value = 2;
  bytes data = 3;
  uint64 nonce = 4;
  bytes signature = 5;
  bytes signer = 6;
}

message KangarooTransactionData {
  bytes to_address = 1;
  bytes value = 2;
  bytes data = 3;
  uint64 nonce = 4;
}